# loopia_of_fury

./: Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
loopia_of_fury/: __init__.py  __main__.py
tests/: test_loopia_of_fury.py
