[tool.poetry]
name = "loopia_of_fury"
version = "1.2.1"
description = 'Loopia of Fury - A "DynDNS" client for Loopia when you have MFA/BankID enabled '
authors = ["Simon Lundström <github-commits@soy.se>"]
homepage = "https://github.com/simmel/loopia_of_fury"

[tool.poetry.dependencies]
python = "^3.6"
su-logging = {extras = ["structured"], version = "^0.3.0"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
loopia_of_fury = 'loopia_of_fury:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
